<resources>
    <string name="app_name">Safebay</string>

    <!--  LoginFragment-->
    <string name="action_standard_sign_in">Sign In</string>
    <string name="action_business_sign_in">Sign In as Business</string>

    <!-- ProfileView -->
    <string name="title_details_standard">Personal Details</string>
    <string name="title_details_business">Business Details</string>
    <string name="msg_input_name">Name *</string>
    <string name="msg_profile_image">Profile Picture</string>
    <string name="msg_input_phone">Phone</string>
    <string name="msg_input_age">Age</string>
    <string name="msg_input_sex">Sex</string>
    <string name="title_address_standard">Personal Address</string>
    <string name="title_address_business">Business Address</string>
    <string name="msg_input_address_line_1">House Number / Unit / Building *</string>
    <string name="msg_input_address_line_2">Street / Subdivision</string>
    <string name="msg_input_brgy">Baranggay *</string>
    <string name="msg_input_province">Province *</string>
    <string name="msg_input_city">City *</string>
    <string name="msg_error_profile_image_empty">Please select a profile image.</string>
    <string name="action_sign_up">Finish</string>

    <!-- HomeActivity -->
    <string name="title_logs">Trace Logs</string>
    <string name="title_logout">Logout</string>
    <string name="title_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_done">Done</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_filter">Filter</string>
    <string name="action_alert">Alert</string>
    <string name="msg_camera_denied">Camera permission not granted by the user.</string>
    <string name="msg_check_in">Do you want to check in?</string>
    <string name="msg_log_loading">Please wait, your information is being saved</string>
    <string name="msg_log_done">Your information has been logged. Thanks for using Safebay!</string>
    <string name="msg_qr">This QR code will be used by the users to log their information on your establishment.</string>
    <string name="msg_success_qr_save">Successfully save QR Code.</string>
    <string name="msg_error_qr_save">There was a problem saving the QR Code.</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_symptoms_low">You have a low chance of having COVID-19 virus right now. Please stay safe!</string>
    <string name="msg_symptoms_warning">You could be infected right now. To be sure, stay at home and contact medical help. Keep yourself healthy!</string>
    <string name="msg_symptoms_critical">Please contact health authorities and take precautions by isolating yourself.</string>
    <string name="msg_alert_send_sms">Do you want to alert visitors from  this list for potential infections?</string>
    <string name="title_alert">Send SMS Alert</string>
    <string name="msg_alert">Someone suspected of carrying COVID-19 was in the same establishment as you. Please get yourself tested.\n\n</string>
    <string name="msg_alert_sent">An SMS message has been sent to the shown list.</string>

</resources>
