<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_logout"
        android:title="@string/title_logout"
        android:icon="@drawable/ic_exit_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_logs"
        android:title="@string/title_logs"
        android:icon="@drawable/ic_scroll_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_manual"
        android:title="@string/title_manual"
        android:visible="false"
        android:icon="@drawable/ic_add_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings_24"
        app:showAsAction="ifRoom" />


</menu>
